# Interval-Map

./: .gitignore  CMakeLists.txt  README.md
include/interval_map/: interval_map.hpp
src/: interval_map.cpp
